[gd_scene load_steps=4 format=3 uid="uid://di6m336sdwfoo"]

[ext_resource type="Script" uid="uid://bpx7p36pc00bg" path="res://Scripts/burger_script.gd" id="1_t577r"]
[ext_resource type="Texture2D" uid="uid://hwampdngmbnb" path="res://Assets/homunc burger.png" id="2_k3lk4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmkpo"]
size = Vector2(213, 59)

[node name="Area2D" type="Area2D"]
scale = Vector2(0.547125, 0.547125)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_t577r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-165, -128.5)
shape = SubResource("RectangleShape2D_lmkpo")

[node name="Button" type="Button" parent="."]
offset_left = -289.0
offset_top = -243.0
offset_right = -37.0
offset_bottom = -14.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-138.49, -120.5)
scale = Vector2(0.451523, 0.451524)
texture = ExtResource("2_k3lk4")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
